2013-01-31  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/IsomapII.m: (v0.1.1)

	- In mode 3, instead of passing the distance function as a string
	that will be run with feval, we now pass a function handle, that
	will be faster and is more elegant. It also allows to pass local
	functions that are not in the global path.

2013-01-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.2.0)
	* matlab/ItkToolbox/itk_imfilter.m: (v0.6.2)

	- Add filters ApproximateSignedDistanceMapImageFilter and
	SignedDanielssonDistanceMapImageFilter.

2013-01-28  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/Vesselness3DImage.cxx: (v0.1.1)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.h: (v0.2.1)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkHessianSmoothed3DToVesselnessMeasureImageFilter.h: (v0.1.0)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementFunction.h: (v0.1.0)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.h: (v0.3.1)

	- Edits to make compatible with ITK 4.3, as some classes that had
	been deprecated have now been removed from ITK.

	* release-0.8.1

	- Last version that was compiled with ITK v4.2.

2013-01-26  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.1.1)
	* matlab/ItkToolbox/itk_imfilter.m: (v0.6.1)

	- Fix bug. Output of itk::SignedMaurerDistanceMapImageFilter
	should be float, even if the input image is binary or int, because
	the distances are Euclidean in real world coordinates.

2013-01-23  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/scinrrd_surface_interpolation.m: (v0.5.0)
	* matlab/PointsToolbox/surface_interpolation.m: (v0.3.0)

	- Input arguments PARAM is now a struct instead of a string, so
	that we can pass parameters with it.
